fix comments overflowing the right side when really long lines are present

--- a/kifi-backend/modules/shoebox/angular/src/common/directives/comments/comment/comment.styl
+++ b/kifi-backend/modules/shoebox/angular/src/common/directives/comments/comment/comment.styl
@@ -16,6 +16,8 @@
 
   .kf-keep-comment-content
     display: flex
+    width: 1px
+    flex-grow: 1
     flex-direction: column
     font-size: 14px
 
